# llm2ner

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: ToMMeR_Demo.ipynb
experiments/: classification.yaml  classification_debug.yaml  trainAttn.yaml  trainCLQK.yaml  trainCLQK_debug.yaml  trainCLQKner.yaml  trainCNNner.yaml  trainCNNner_PileNER.yaml  trainLCattn.yaml  trainLCattn_debug.yaml  trainMHSA.yaml  trainMHSA_debug.yaml  trainTM_Models.yaml  trainTM_debug.yaml  trainTM_layers.yaml  trainTM_rank.yaml  trainTokenMatching.yaml  xp_evalAttn.py  xp_learnAttn.py  xp_learnAttnCNN.py  xp_learnCLAttn.py  xp_learnCLKQner.py  xp_learnClassEmbedder.py  xp_learnClassification.py  xp_learnMHSA.py  xp_learnTokenMatching.py
saved_models/ToMMeR-Llama-3.2-1B_L6_R64/: Eval_0_Flat_threshold(thr=0.5).csv  Eval_1_Flat_greedy(thr=0.5).csv  Eval_2_Nested_threshold(thr=0.5).csv  Eval_3_LLM_Annotated_threshold(thr=0.5).csv  Phase0_eval_greedy_0.5.csv  Phase0_eval_threshold_0.5.csv  README.md  definition.json  parameters
scripts/: download_llm.py  test_decoders.py
src/llm2ner/: __init__.py  classification.py  data.py  decoders.py  distillation.py  heuristics.py  losses.py  masks.py  plotting.py  results.py  tasks.py  utils.py  xpmModel.py
src/llm2ner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm2ner/baselines/: __init__.py  annotate_api.py  llmAsJudge.py
src/llm2ner/models/: ToMMeR.md  TokenMatching.py  __init__.py  mhsa.py  model.py  tommer.py
